# fastapi-starter-kit

./: .cursorignore  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: fastapi.mdc
app/: __init__.py  main.py
app/config/: __init__.py  database.py  settings.py
app/features/: __init__.py
app/integrations/: __init__.py
app/interfaces/: __init__.py
app/interfaces/http/: __init__.py
app/schemas/: __init__.py
